--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,5 @@
 # Project target.
 target=android-18
 android.library.reference.1=../Leopardus
+android.library.reference.3=../LibActionBarSherlock
+android.library.reference.2=../libSlidingMenu
