--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=..\\Leopardus
-android.library.reference.3=..\\LibActionBarSherlock
-android.library.reference.2=..\\libSlidingMenu
+android.library.reference.1=../Leopardus
+android.library.reference.3=../LibActionBarSherlock
+android.library.reference.2=../libSlidingMenu
 android.library.reference.4=../libUniversalImageLoader
